# ChatBackend

./: README.md  dump.rdb  gozei.json  index.html  manage.py  pyproject.toml  teste.py
config/: asgi.py  celery.py  settings.py  urls.py
core/ai_microsservice/: apps.py
core/authUser/: admin.py  apps.py  authentication.py  managers.py  models.py  serializers.py  views.py
core/authUser/migrations/: 0001_initial.py  0002_alter_user_passage_id.py
core/bias/: apps.py  views.py
core/chat/: admin.py  consumers.py  models.py  router.py  routing.py  serializers.py  views.py
core/chat/migrations/: 0001_initial.py  0002_alter_chat_user.py  0003_answers.py  0004_rename_body_answer_answer_remove_answer_author_type_and_more.py
core/chatgptIA/: admin.py  apps.py  models.py  serializer.py  signals.py  views.py
core/chatgptIA/helpers/: gpt_config.py
core/chatgptIA/migrations/: 0001_initial.py
core/cohereIA/: admin.py  apps.py  models.py  serializers.py  views.py
core/cohereIA/management/commands/: clear_dataset.py  generate_new_dataset.py  populate_dataset.py  transfer_data.py
core/cohereIA/migrations/: 0001_initial.py  0002_currentcohereia.py
core/cohereIA/resources/: dataset.jsonl  main_dataset.jsonl
core/cohereIA/resources/backup/: dataset_backup.jsonl  example.jsonl
core/cohereIA/scripts/: __init__.py  generate_new_model.py
core/geminiIA/genericAI/: apps.py  config_ai.py  models.py  serializer.py  signals.py  views.py
core/geminiIA/genericAI/migrations/: 0001_initial.py  0002_geminigenericai_cover_alter_geminigenericai_answer.py
core/geminiIA/humanscience/: admin.py  apps.py  config_ia.py  models.py  serializers.py  signal.py  views.py
core/geminiIA/humanscience/migrations/: 0001_initial.py  0002_alter_humanscienceai_answer.py
core/geminiIA/language/: admin.py  apps.py  config_ia.py  models.py  serializers.py  signal.py  views.py
core/geminiIA/language/migrations/: 0001_initial.py  0002_alter_languagesai_answer.py
core/geminiIA/mathematics/: admin.py  apps.py  config_ia.py  models.py  serializers.py  signal.py  views.py
core/geminiIA/mathematics/migrations/: 0001_initial.py  0002_alter_mathai_answer.py
core/geminiIA/naturalscience/: apps.py  config_ia.py  models.py  serializers.py  signal.py  views.py
core/geminiIA/naturalscience/migrations/: 0001_initial.py  0002_alter_naturalscienceai_answer.py
core/geminiIA/textwriting/: admin.py  apps.py  config_ia.py  frame.py  models.py  serializers.py  signal.py  views.py
core/geminiIA/textwriting/migrations/: 0001_initial.py  0002_alter_textwritingai_answer.py  0003_alter_textwritingai_answer.py  0004_alter_textwritingai_answer.py
core/payments/: admin.py  models.py  payment.py  serializer.py  tests.py  views.py
core/payments/migrations/: 0001_initial.py  0002_payment_instalments.py  0003_rename_amount_payment_transaction_amount_and_more.py  0004_payment_issuer_id_and_more.py  0005_payment_payer_email.py  0006_alter_payment_instalments_alter_payment_user.py  0007_payment_description.py  0008_payment_token.py
core/payments/utils/: verify.py
core/utils/: sendMessage.py
